# trackflow-ai-powered-logistics-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  compose.coolify.yaml  compose.yaml  conftest.py  package-lock.json  package.json
.agents/: README.md
.agents/rules/: README.md  authentication-security.md  database-engineering.md  preserve-delivered-engagements.md  public-ui-visibility.md  sensitive-local-datasets.md  telemetry.md  testing-error-handling-ci.md
.agents/skills/: README.md
.github/workflows/: README.md  container-images.yml  deploy-production.yml  release-checks.yml
agents/: README.md
agents/_template/: README.md
agents/tools/: README.md
apps/: README.md
apps/marketing-site/: README.md  application.html  index.html  llms.txt  privacy.html  robots.txt  sitemap.xml
apps/talent-pipeline-tracker/: README.md  package.json  spec.md
apps/uis/: README.md  package-lock.json  spec.md  tailwind.config.ts
data/: README.md  context_pipeline_design.md  pipeline_data_intructions.md  pyproject.toml
data/eval/: README.md
data/pipelines/: PIPELINE_DESIGN.md  README.md  __init__.py  pipeline.py
data/pipelines/business_performance/: README.md  __init__.py  cache.py  dispatcher.py  flows.py  locks.py  prefect_version.py  queue.py  runner.py  startup_guard.py  worker.py
data/pipelines/business_performance/spikes/: R2_CACHE_SPIKE.md  __init__.py  r2_cache_spike.py
data/process/: README.md  __init__.py
data/process/business_performance/: __init__.py  vocabulary.py  weekly_kpis.py
data/raw/: README.md
docker/: backoffice.Dockerfile  central-api.Dockerfile  identity.Dockerfile  prefect-db-backup.Dockerfile  prefect-postgres-backup-role.sh  prefect-postgres-bootstrap.sh  prefect-postgres-guard-role.sh  prefect-postgres-guard.sh  prefect-postgres.Dockerfile
docs/: README.md
docs/archive/: README.md  incident-report-processor-retirement.md  (+4 more)
memory-bank/: README.md  progress.md  projectbrief.md  techContext.md
resources/: README.md
scripts/: README.md  analyze.py  incidents-trackflow-analysis.csv  incidents-trackflow.csv  seed_incidents.py
services/: README.md
services/central-api/: .env.example  README.md  alembic.ini  compose.yml  pyproject.toml
services/central-api/central_api/: __init__.py  health.py  main.py
services/central-api/central_api/core/: __init__.py  config.py  dependencies.py
services/central-api/central_api/db/: __init__.py  session.py
services/central-api/central_api/domains/: __init__.py
services/central-api/central_api/domains/incidents/: __init__.py  models.py  repository.py  router.py  schemas.py  seed.py  service.py
services/central-api/central_api/domains/inventory/: __init__.py  models.py  repository.py  router.py  schemas.py  seed.py  service.py
services/central-api/central_api/domains/operations/: __init__.py  control.py  models.py
services/central-api/central_api/domains/reporting/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py  status.py
services/central-api/central_api/domains/suppliers/: __init__.py  constants.py  models.py  repository.py  router.py  schemas.py  seed.py  service.py
services/central-api/central_api/domains/telemetry/: __init__.py  events.py  models.py  recorder.py  repository.py  router.py  schemas.py  service.py
services/central-api/migrations/: README.md  env.py
services/central-api/migrations/versions/: 20260702_0001_inventory_schema.py  20260702_0002_incident_manager.py  20260702_0003_suppliers_schema.py  20260709_0004_telemetry_events.py  20260713_0005_operations_feed_control.py  20260714_0006_clients_and_client_id.py  20260714_0007_stockout_and_discrepancy_events.py  20260714_0008_reporting_schema.py  20260715_0009_reporting_worker_heartbeat.py  20260716_0010_reporting_execution_hardening.py
services/central-api/scripts/: __init__.py  db_size_guard.py  import_suppliers_from_tinydb.py  maintenance_worker.py  operations_feed.py  prefect_db_backup.py  prefect_version_guard.py  production_migrate.py  prune_business_events.py  prune_prefect_runs.py  prune_telemetry_events.py  verify_reporting_startup.py
services/central-api/tests/: __init__.py  conftest.py  test_api.py  test_business_event_pruning.py  test_concurrency_and_queries.py  test_incidents.py  test_inventory_clients.py  test_inventory_discrepancies.py  test_inventory_stockouts.py  test_maintenance_worker.py  test_migrations.py  test_operations_feed.py  test_prefect_backup.py  test_prefect_retention.py  test_prefect_version_guard.py  test_production_migrate.py  test_readiness.py  test_reporting_api.py  test_reporting_deployment.py  test_reporting_persistence.py  test_reporting_queue.py  test_reporting_status.py  test_security_and_failures.py  test_seed.py  test_suppliers.py  test_telemetry.py  test_validation_and_constraints.py  test_verify_reporting_startup.py
services/central-api/tests/fixtures/: sample-incidents.csv
services/identity/: .env.example  README.md  pyproject.toml
services/identity/identity/: __init__.py  cli.py  config.py  constants.py  dependencies.py  email.py  main.py  models.py  repository.py  security.py  service.py
services/identity/tests/: conftest.py  test_auth.py  test_auth_audit.py  test_cli.py  test_password_reset.py  test_security.py  test_startup.py  test_users.py
services/incident-processor/: .env.example  README.md  pyproject.toml
services/incident-processor/incident_processor/: __init__.py  analysis.py  cli.py  config.py  constants.py  main.py  models.py  reporting.py
services/incident-processor/tests/: test_analysis.py  test_api.py  test_cli.py
services/incident-processor/tests/fixtures/: sample-incidents.csv
services/supplier-directory/: .env.example  README.md  pyproject.toml
services/supplier-directory/data/: .gitkeep
services/supplier-directory/supplier_directory/: __init__.py  config.py  constants.py  main.py  models.py  repository.py  seed.py  service.py
services/supplier-directory/tests/: test_api.py  test_seed.py  test_validation.py
skills/: README.md
uis/: README.md
workflows/: README.md
(+303 files in other folders)
