[project]
name = "trackflow-data-pipelines"
version = "0.1.0"
description = "TrackFlow data pipelines and pure business-performance transformations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.40",
  "prefect>=3",
  "prefect-aws",
  "psycopg[binary]",
  "sqlalchemy>=2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16.0",
  "moto[server]>=5.1",
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipelines", "process"]

[tool.pytest.ini_options]
testpaths = ["../tests/pipelines"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.coverage.run]
branch = true
source = ["pipelines", "process"]
# The spike is executed as its own cross-process gate; subprocess coverage data
# is not combined into the unit/integration suite's production-module metric.
omit = ["*/business_performance/spikes/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
