[project]
name = "trackflow-central-api"
version = "0.1.0"
description = "TrackFlow Central API inventory service."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.0",
  "fastapi>=0.116.0",
  "psycopg2-binary>=2.9.10",
  "pydantic-settings>=2.10.0",
  "sqlmodel>=0.0.24",
  "trackflow-auth",
  "trackflow-incidents",
  "trackflow-data-pipelines",
  "uvicorn[standard]>=0.35.0",
]

[project.scripts]
seed-inventory = "central_api.domains.inventory.seed:entrypoint"
seed-incidents = "central_api.domains.incidents.seed:entrypoint"
seed-suppliers = "central_api.domains.suppliers.seed:entrypoint"
central-api-migrate = "scripts.production_migrate:entrypoint"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "httpx>=0.28.0",
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
  "types-psycopg2>=2.9.21.20250516",
]

[tool.uv.sources]
trackflow-auth = { path = "../../packages/trackflow_auth", editable = true }
trackflow-incidents = { path = "../../packages/trackflow_incidents", editable = true }
trackflow-data-pipelines = { path = "../../data", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["central_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../../packages/trackflow_auth"]
filterwarnings = [
  "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
  "jose",
  "jose.*",
  "pipelines",
  "pipelines.*",
  "process",
  "process.*",
  "trackflow_auth",
  "trackflow_auth.*",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["central_api"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
