[project]
name = "trackflow-identity"
version = "0.1.0"
description = "TrackFlow identity FastAPI service."
requires-python = ">=3.11"
dependencies = [
  "argon2-cffi>=23.1.0",
  "fastapi>=0.115.0",
  "python-jose[cryptography]>=3.3.0",
  "resend>=2.0.0",
  "tinydb>=4.8.0",
  "trackflow-auth",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.16.0",
  "pytest>=8.2.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
]

[project.scripts]
create-admin = "identity.cli:entrypoint"
revoke-sessions = "identity.cli:revoke_entrypoint"

[tool.uv.sources]
trackflow-auth = { path = "../../packages/trackflow_auth", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["identity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../../packages/trackflow_auth"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["jose", "jose.*", "trackflow_auth", "trackflow_auth.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["identity.main", "identity.repository", "identity.security"]
disable_error_code = ["arg-type"]
