[project]
name = "trackflow-incident-processor"
version = "0.1.0"
description = "TrackFlow incident report processor CLI and FastAPI service."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
  "trackflow-auth",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
]

[project.scripts]
analyze = "incident_processor.cli:entrypoint"

[tool.uv.sources]
trackflow-auth = { path = "../../packages/trackflow_auth", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["incident_processor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../../packages/trackflow_auth"]
