[project]
name = "trackflow-incident-processor"
version = "0.1.0"
description = "TrackFlow incident report processor CLI and FastAPI service."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
  "trackflow-auth",
  "trackflow-incidents",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.16.0",
  "pytest>=8.2.0",
  "ruff>=0.12.0",
]

[project.scripts]
analyze = "incident_processor.cli:entrypoint"

[tool.uv.sources]
trackflow-auth = { path = "../../packages/trackflow_auth", editable = true }
trackflow-incidents = { path = "../../packages/trackflow_incidents", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["incident_processor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../../packages/trackflow_auth"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["trackflow_auth", "trackflow_auth.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["incident_processor.reporting"]
disable_error_code = ["attr-defined"]
