[project]
name = "trackflow-supplier-directory"
version = "0.1.0"
description = "TrackFlow supplier directory FastAPI service."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "tinydb>=4.8.0",
  "trackflow-auth",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
]

[project.scripts]
seed = "supplier_directory.seed:entrypoint"

[tool.uv.sources]
trackflow-auth = { path = "../../packages/trackflow_auth", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["supplier_directory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../../packages/trackflow_auth"]
